--- a/style.css
+++ b/style.css
@@ -31,14 +31,62 @@ h3 {
   background: grey;
 }
 
-/*"The Classy Roommate"*/
 
+
+/*"The Classy Roommate"*/
+#audrey {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  border:15px solid red;
+}
 
 /*"The Neurotic New Yorker"*/
+#woody {
+  padding:55.5px 32.5px;
+  background-color: white;
+  border:15px solid red;
+  margin-right: 150px;
+  margin-top: 20px;
+}
 
+#newyork {
+  border:15px solid red;
+  display: inline-block;
+}
+
+.space {
+  text-align: center;
+}
 
 /*"The Art History Major"*/
+#warhol {
+  height: 300px;
+}
+
+#picasso {
+  height: 300px;
+}
+
+.double {
+  border:20px solid navy;
+  text-align:center;
+  background-color: white;
+}
 
 
 /*"Pop Culture Fanatic"*/
+#mj {
+  height: 200px;
+  border: 5px solid black;
+  display: block;
+  margin: auto;
+  margin-bottom: 10px;
+}
 
+#beyonce {
+  height: 200px;
+  border: 10px solid purple;
+  display: block;
+  margin: auto;
+}
